2011-01-10  6.7.4-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-5, SVN revision 6422.

2012-01-02  6.7.4-5 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed -black-threshold and -white-threshold so they work properly with
    the -channels option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20096).

2012-01-02  6.7.4-5 Glenn Randers-Pehrson <glennrp@image...>
  * Removed PNG_USE_CLONE cruft from the PNG encoder (see 2011-11-19 entry)
  * Promote image depths 9-15 to 16 to avoid crashing in the PNG
    encoder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20098).

2011-01-01  6.7.4-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-4, SVN revision 6318.

2010-12-30  6.7.4-4 Glenn Randers-Pehrson <glennrp@image...>
  * Fix problems with JNG encoder "quality" (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20076).

2011-12-30  6.7.4-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-3, SVN revision 6310.

2011-12-28  6.7.4-3 Cristy  <quetzlzacatenango@image...>
  * Fix memory leak in JP2 coder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20071).
  * Use maximum bounds when rendering PDF (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20078).

2011-12-25  6.7.4-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-2, SVN revision 6254.

2011-12-24  6.7.4-2 Cristy  <quetzlzacatenango@image...>
  * Export new Windows binaries.

2011-12-21  6.7.4-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-1, SVN revision 6236.

2011-12-12  6.7.4-0 Cristy  <quetzlzacatenango@image...>
  * Sped up -noise option when radius is 0.
  * Read concatentated arcs correctly in a SVG path (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19992).
  * PDF's now convert properly with -define pdf:use-cropbox=true (reference