@@ -1,3 +1,9 @@
+2011-01-10  6.7.4-6 Cristy  <quetzlzacatenango@image...>
+  * New version 6.7.4-5, SVN revision 6428.
+
+2011-01-12  6.7.4-6 Cristy  <quetzlzacatenango@image...>
+  * Eliminate preprocessor exception for the HDRI build.
+
 2011-01-10  6.7.4-5 Cristy  <quetzlzacatenango@image...>
   * New version 6.7.4-5, SVN revision 6422.
 
